p3/confs/wil42/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42
  namespace: dev
  labels:
    app.kubernetes.io/name: wil42
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wil42
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wil42
    spec:
      containers:
      - name: wil42
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
