p3/confs/wil42/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42
  namespace: dev
spec:
  selector:
    app.kubernetes.io/name: wil42
  ports:
    - port: 80
      targetPort: 8888
